<resources>
    <string name="app_name">EventRegistration</string>
    <string name="action_settings">Settings</string>
    <string name="newparticipant_hint">Who?</string>
    <string name="newparticipant_button">Add Participant</string>
    <string name="newevent_hint">Event name?</string>
    <string name="newevent_date_label">Date?</string>
    <string name="newevent_date_first">01-01-2016</string>
    <string name="newevent_starttime_label">Start time?</string>
    <string name="newevent_starttime_first">12:00</string>
    <string name="newevent_endtime_label">End Time?</string>
    <string name="newevent_endtime_first">13:00</string>
    <string name="newevent_button">Add Event</string>
    <string name="participantspinner_label">Participant?</string>
    <string name="eventspinner_label">Event?</string>
    <string name="register_button">Register</string>
    <string name="error_message" />
</resources>
